Implement naive lexer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,6 @@ project(scc)
 cmake_minimum_required(VERSION 3.19)
 set(CMAKE_CXX_STANDARD 17)
 aux_source_directory(scc SRC_SCC)
+aux_source_directory(scc/common SRC_SCC_COMMON)
+list(APPEND SRC_SCC ${SRC_SCC_COMMON})
 add_executable(scc main.cpp ${SRC_SCC})
